--- a/packages/lights/all_lights.yaml
+++ b/packages/lights/all_lights.yaml
@@ -4,6 +4,7 @@ light:
     lights:
       all_lights:
         friendly_name: "All Lights"
+        unique_id: all_lights_template
         value_template: >
           {% if ((states.light|selectattr('state','eq','on')|map(attribute='entity_id'))|join(',')) == ''
               or ((states.light|selectattr('state','eq','on')|map(attribute='entity_id'))|join(',')) == 'light.all_lights' %}
