--- a/packages/notifications/baby_door_notification.yaml
+++ b/packages/notifications/baby_door_notification.yaml
@@ -4,6 +4,7 @@ binary_sensor:
     sensors:
       baby_room_door_closed_long:
         friendly_name: "Baby room door closed long"
+        unique_id: baby_room_door_closed_long
         value_template: >-
           {% if states.binary_sensor.baby_room_door_contact.state == 'off' %}
           {% if (as_timestamp(now()) - as_timestamp(states.binary_sensor.baby_room_door_contact.last_changed))/60 > 30 %}
