fix dreame stuff

--- a/packages/cleaning/dreame_vacuum_automations.yaml
+++ b/packages/cleaning/dreame_vacuum_automations.yaml
@@ -57,6 +57,9 @@ automation:
           - condition: state
             entity_id: sensor.xiaomi_robot_vacuum_x20_status
             state: charging
+          - condition: state
+            entity_id: sensor.xiaomi_robot_vacuum_x20_status
+            state: sleeping
     action:
       - device_id: 656ec1051d31a0c67eecae2410fa14f2
         domain: select
@@ -65,7 +68,7 @@ automation:
         option: "off"
       - service: vacuum.set_fan_speed
         data:
-          fan_speed: max
+          fan_speed: turbo
         target:
           entity_id: vacuum.xiaomi_robot_vacuum_x20
       - service: dreame_vacuum.vacuum_clean_segment
@@ -75,7 +78,6 @@ automation:
             - "14"  # Lounge
             - "13"  # Front Hall
             - "17"  # Living Room
-          repeat: 1
         target:
           entity_id: vacuum.xiaomi_robot_vacuum_x20
       - service: input_boolean.turn_on
@@ -85,3 +87,8 @@ automation:
             - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_14  # Lounge
             - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_13  # Front Hall
             - input_boolean.xiaomi_robot_vacuum_x20_vacuuming_17  # Living Room
+      - service: input_text.set_value
+        data:
+          value: "17"  # Set to the last room (Living Room)
+        target:
+          entity_id: input_text.xiaomi_robot_vacuum_x20_last_room
