--- a/packages/cleaning/dreame_vacuum.yaml
+++ b/packages/cleaning/dreame_vacuum.yaml
@@ -118,12 +118,17 @@ script:
                         domain: select
                         entity_id: select.xiaomi_robot_vacuum_x20_mop_wash_level
                         type: select_option
-                        option: intense
-                      - service: vacuum.xiaomi_robot_vacuum_x20_suction_level
+                        option: water_saving
+                      - service: vacuum.set_fan_speed
                         data:
-                          fan_speed: balanced
+                          fan_speed: standard
                         target:
                           entity_id: vacuum.xiaomi_robot_vacuum_x20
+                      - device_id: 656ec1051d31a0c67eecae2410fa14f2
+                        domain: select
+                        entity_id: select.xiaomi_robot_vacuum_x20_cleaning_mode
+                        type: select_option
+                        option: sweeping_and_mopping
                       - service: dreame_vacuum.vacuum_clean_segment
                         data:
                           segments:
@@ -153,6 +158,11 @@ script:
                           fan_speed: turbo
                         target:
                           entity_id: vacuum.xiaomi_robot_vacuum_x20
+                      - device_id: 656ec1051d31a0c67eecae2410fa14f2
+                        domain: select
+                        entity_id: select.xiaomi_robot_vacuum_x20_cleaning_mode
+                        type: select_option
+                        option: sweeping
                       - service: dreame_vacuum.vacuum_clean_segment
                         data:
                           segments:
@@ -220,14 +230,19 @@ script:
                 sequence:
                   - device_id: 656ec1051d31a0c67eecae2410fa14f2
                     domain: select
-                    entity_id: select.xiaomi_robot_vacuum_x20_mop_intensity
+                    entity_id: select.xiaomi_robot_vacuum_x20_mop_wash_level
                     type: select_option
-                    option: intense
+                    option: water_saving
                   - service: vacuum.set_fan_speed
                     data:
-                      fan_speed: balanced
+                      fan_speed: standard
                     target:
                       entity_id: vacuum.xiaomi_robot_vacuum_x20
+                  - device_id: 656ec1051d31a0c67eecae2410fa14f2
+                    domain: select
+                    entity_id: select.xiaomi_robot_vacuum_x20_cleaning_mode
+                    type: select_option
+                    option: sweeping_and_mopping
                   - service: dreame_vacuum.vacuum_clean_segment
                     data:
                       segments:
@@ -254,9 +269,14 @@ script:
                     option: "off"
                   - service: vacuum.set_fan_speed
                     data:
-                      fan_speed: max
+                      fan_speed: turbo
                     target:
                       entity_id: vacuum.xiaomi_robot_vacuum_x20
+                  - device_id: 656ec1051d31a0c67eecae2410fa14f2
+                    domain: select
+                    entity_id: select.xiaomi_robot_vacuum_x20_cleaning_mode
+                    type: select_option
+                    option: sweeping
                   - service: dreame_vacuum.vacuum_clean_segment
                     data:
                       segments:
